# hcs-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs
hcs-cli/: Cargo.toml
hcs-cli/src/: main.rs
hcs-rs/: Cargo.toml
hcs-rs/src/: computenetwork_bindings.rs  computenetworkdefs.rs  computestorage.rs  computestorage_bindings.rs  hypervdevicevirtualizationdefs.rs  lib.rs
hcsapis/: Cargo.toml
hcsapis/src/: computenetwork.rs  lib.rs
hcsrscli/: Cargo.toml
src/: Cargo.toml  computecore_bindings.rs  computedefs.rs  computenetwork_bindings.rs  computenetworkdefs.rs  computestorage.rs  computestorage_bindings.rs  diskutilities.rs  errorcodes.rs  hypervdevicevirtualization_bindings.rs  hypervdevicevirtualizationdefs.rs  ispresent.rs  lib.rs  vhdutilities.rs
src/compute/: defs.rs  errorcodes.rs  mod.rs
src/computecore/: Cargo.toml  bindings.rs  ispresent.rs  mod.rs  utilities.rs
src/computedefs/: Cargo.toml
src/computenetwork/: Cargo.toml  bindings.rs  defs.rs  ispresent.rs  mod.rs
src/computestorage/: Cargo.toml  bindings.rs  ispresent.rs  mod.rs
src/hcsapis/: Cargo.toml  build.rs
src/hcsapis/src/: computecore.rs  computedefs.rs  computenetwork.rs  computestorage.rs  hypervdevicevirtualization.rs  lib.rs
src/hcsrs/: Cargo.toml
src/hcsrscli/: Cargo.toml
src/hypervdevicevirtualization/: Cargo.toml  bindings.rs  defs.rs  ispresent.rs  mod.rs  utilities.rs
src/netschema/: mod.rs
src/schema/: mod.rs
src/schema/common/: mod.rs
src/schema/containers/: mod.rs
src/schema/containers/credential_guard/: mod.rs
src/schema/containers/resources/: mod.rs
src/schema/device_assignment/: mod.rs
src/schema/hvsocket/: mod.rs
src/schema/layer_management/: mod.rs
src/schema/options/: mod.rs
src/schema/process/: mod.rs
src/schema/registry/: mod.rs
src/schema/requests/: mod.rs
src/schema/requests/guest/: mod.rs
src/schema/requests/service/: mod.rs
src/schema/requests/system/: mod.rs
src/schema/responses/: mod.rs
src/schema/responses/service/: mod.rs
src/schema/responses/system/: mod.rs
src/schema/utils/: mod.rs
src/schema/virtual_machines/: mod.rs
src/schema/virtual_machines/resources/: mod.rs
src/schema/virtual_machines/resources/compute/: mod.rs
src/schema/virtual_machines/resources/gpu/: mod.rs
src/schema/virtual_machines/resources/guest_state/: mod.rs
(+3 files in other folders)
