[package]
name = "hcs-rs"
version = "0.1.0"
authors = ["rafawo <rafawo1@hotmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
description = "Rust abstractions for HCS APIs."
repository = "https://github.com/rafawo/hcs-rs"
readme = "README.md"
keywords = ["windows", "hcs", "host_compute_service", "hyper-v", "windows-containers"]
categories = ["api-bindings", "os::windows-apis"]
build = "build.rs"

[dependencies]
widestring = "0.4.0"
winapi = { version = "0.3.6", features = [
    "combaseapi",
    "winbase",
] }
virtdisk-rs = "1.5.0"
winutils-rs = "0.1.4"
