[package]
name = "hcs-rs"
version = "0.1.0"
authors = ["rafawo <rafawo1@hotmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
description = "Rust abstractions for HCS APIs."
repository = "https://github.com/rafawo/hcs-rs"
readme = "README.md"
keywords = ["windows", "hcs", "host_compute_service", "hyper-v", "windows-containers"]
categories = ["api-bindings", "os::windows-apis"]
build = "build.rs"

[dependencies]
chrono = { version = "0.4.7", features = ["serde"] }
base64 = "0.10.1"
hex = "0.3.2"
serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"
virtdisk-rs = "2.0.0"
widestring = "0.4.0"
winapi = { version = "0.3.6", features = [
    "combaseapi",
    "winbase",
] }
winutils-rs = "0.2.0"
